# minishell01

./: .gitignore  CMakeLists.txt  Makefile  a  a.c  a.out  aaa  b.c  bbb  builtest  builtin.c  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_func.c  builtin_pwd.c  builtin_unset.c  ccc  eee  env_handle.c  env_handler.c  excute.c  execute.c  for_test.c  ft_echo.c  ft_pwd.c  gittestfile.c  here_doc.MD  leakcheck.c  main.c  make_tree.c  minishell  minishell.h  minishell.h.gch  outfile0000  outfile01  pseudo.MD  pseudo_excute.md  (+30 more)
builtin_srcs/: builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_unset.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
minitest/: ls
pseudo_code/: pseudo_execute.md  pseudo_expand.MD  pseudo_quote.md  pseudo_token.md
srcs/: .tree_parser_heredoc.c.swp  cmd_action.c  delete_quote.c  delquote_expand.c  delquote_utils.c  env_handler.c  execute.c  fork_frame.c  main.c  make_tree.c  make_tree_redir_node.c  open_redir_file.c  path.c  quote.c  signal_handler.c  test.c  tokenize.c  tokenize_case1.c  tokenize_case2.c  tokenize_utils.c  tree_parser.c  tree_parser_heredoc.c  utils.c  utils1.c  utils2.c  utils_atoi.c  utils_cleaners.c  utils_itoa.c  utils_list.c  utils_split.c  utils_strjoin.c  utils_system.c
srcs/execute/: child_pipe.c  cmd_action.c  exec_builtin.c  execute.c  execute_builtin.c  fork_frame.c  open_redir_file.c  path.c
srcs/init/: env_handler.c  heredoc_signal_handler.c  signal_handler.c
srcs/parser/: delquote_expand.c  delquote_utils.c  tree_parser.c  tree_parser_heredoc.c
srcs/tokenize/: tokenize.c  tokenize_case1.c  tokenize_case2.c  tokenize_utils.c
srcs/tree_structure/: make_tree.c  (+1 more)
test/: ls
(+15 files in other folders)
